feat: add product endpoint
